[gd_scene load_steps=2 format=3 uid="uid://bl2jno7h2an0k"]

[ext_resource type="Script" path="res://scenes/screens/SettingsScreen/settings_slider.gd" id="1_nj1u8"]

[node name="settings_slider" type="Control"]
custom_minimum_size = Vector2(200, 75)
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 75.0
script = ExtResource("1_nj1u8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 3

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Label For Settings Slider"

[node name="HSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
value = 100.0
tick_count = 10
ticks_on_borders = true

[node name="SliderValueLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "1"
horizontal_alignment = 1

[connection signal="value_changed" from="VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
